<resources>
    <string name="app_name">Paykar</string>
    <string name="versionApp">Версия 3.0.4 выпуск 26.02.2025</string>
    <string name="authorization_title">Авторизация</string>
    <string name="authorization_phone">Телефон</string>
    <string name="authorization_button">Далее</string>
    <string name="confirmation_title">Подтверждение</string>
    <string name="confirmation_code">Код подтверждения</string>
    <string name="confirmation_button">Подтвердить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cardTitle">Клубная карта</string>
    <string name="cardSloganLine1">Привяжите клубную карту и</string>
    <string name="cardSloganLine2">совершайте выгодные покупки</string>
    <string name="saleTitle">Скидки</string>
    <string name="choiceTitle">Вам понравится</string>
    <string name="promoTitle">Акции</string>
    <string name="reviewsTitle">Отзывы покупателей</string>
    <string name="infoTitle">Информация для покупателей</string>
    <string name="infoBtnTitle1">Как купить</string>
    <string name="infoBtnTitle2">Условия оплаты</string>
    <string name="infoBtnTitle3">Условия доставки</string>
    <string name="webChatTitle">Пообщаться с оператором</string>
    <string name="catalogTitle">Каталог</string>
    <string name="searchTitle">Поиск</string>
    <string name="basketTitle">Корзина</string>
    <string name="profileTitle">Профиль</string>
    <string name="webChat">Поддержка</string>
    <string name="sectionName">Название разделов</string>
    <string name="productName">Название товара</string>
    <string name="priceTitle">Цена за 1 шт</string>
    <string name="productPrice">10 сомони</string>
    <string name="productDescription">Краткое описание товара</string>
    <string name="addBasket">Добавить в корзину</string>
    <string name="addBasket2">В корзину</string>
    <string name="userName">Каюмов Азим</string>
    <string name="userPhone">+992 555557571</string>
    <string name="wishlist">Избранное</string>
    <string name="historyOrder">История заказов</string>
    <string name="sales">Акции</string>
    <string name="logout">Выйти</string>
    <string name="cardConvert">10 баллов = 1 сомони</string>
    <string name="cardUpdate">Обновлено: 10.06.2022 в 12 ч</string>
    <string name="basketQuan">1</string>
    <string name="resume">Продолжить</string>
    <string name="searchAddress">Найти адрес</string>
    <string name="orderTitle">Ваш заказ</string>
    <string name="orderPrice">Сумма заказа</string>
    <string name="orderDiscountPrice">Сумма скидок</string>
    <string name="deliveryPrice">Доставка</string>
    <string name="totalPrice">Итого</string>
    <string name="orderConf">Оформить заказ</string>
    <string name="addressConf">Подтвердите адрес</string>
    <string name="confirm">Подтвердить</string>
    <string name="street">Улица</string>
    <string name="entrance">Подъезд</string>
    <string name="house">Дом</string>
    <string name="flat">Квартира, офис</string>
    <string name="floor">Этаж</string>
    <string name="comment">Комментарий курьеру</string>
    <string name="topSearch">Сейчас ищут</string>
    <string name="recommended">Рекомендуемые</string>
    <string name="search">Найти молоко, рис …</string>
    <string name="notifyTitle">Уведомления</string>
    <string name="notifyTitleMessage">Загаловок уведомления</string>
    <string name="notifyMessage">Описание уведомления</string>
    <string name="orderNumber">Заказ №1</string>
    <string name="orderDateTitle">Оформлен</string>
    <string name="orderDate">20.06.2022 в 14:00 ч.</string>
    <string name="orderStatusTitle">Статус заказа</string>
    <string name="orderStatus">Выполняется</string>
    <string name="orderHistoryPriceTitle">Сумма заказа</string>
    <string name="orderHistoryPrice">1000 сомони</string>
    <string name="repeatOrder">Повторить</string>
    <string name="cancellationOrder">Отменить заказ</string>
    <string name="orderDeliveryPriceTitle">Сумма доставки</string>
    <string name="orderDeliveryPrice">10 сомони</string>
    <string name="orderTotalPriceTitle">Итого</string>
    <string name="orderTotalPrice">10000 сомони</string>
    <string name="phoneCardTitle">Привязка карты</string>
    <string name="phoneCardDescription">Укажите номер телефона на который привязана ваша карта</string>
    <string name="cardBalanceTitle">На моей карте</string>
    <string name="cardBalance">1000 баллов</string>
    <string name="cardNumberTitle">Номер карты</string>
    <string name="cardNumber">100000</string>
    <string name="historyCard">История покупок</string>
    <string name="promoCard">Акции и спецпредложения</string>
    <string name="roolCard">Основные правила</string>
    <string name="untieCard">Отвязать карту</string>
    <string name="purchaseCard">Покупка</string>
    <string name="purchaseDateCard">20.06.2022 в 14:00</string>
    <string name="purchaseAmountCard">1500 сомони</string>
    <string name="purchaseAddBonusCard">+200 баллов</string>
    <string name="benefitCard">Выгода 10 сомони</string>
    <string name="offsCard">-100 баллов</string>
    <string name="pointMarketCard">Душанбе, ул. Айни 16б</string>
    <string name="checkDateDetail">10 июня 2022 | 20:31</string>
    <string name="checkNumberDetail">№ чека: 418090</string>
    <string name="checkTicketDetail">№ кассы: 3</string>
    <string name="checkTotalDetail">Итого</string>
    <string name="checkTotalInDetail">200 сомони</string>
    <string name="checkOffsScoresDetail">Списание баллов</string>
    <string name="checkOffsScoresInDetail">-100 баллов</string>
    <string name="checkPaymentDetail">Оплата</string>
    <string name="checkPaymentTypeDetail">Наличные</string>
    <string name="checkYouBenefitDetail">Ваша выгода</string>
    <string name="checkYouBenefitInDetail">10 сомони</string>
    <string name="checkAccruedDetail">Начислено баллов</string>
    <string name="checkAccruedInDetail">+50 баллов</string>
    <string name="productMeasure">1 шт</string>
    <string name="productCardPriceTitle">Цена по карте</string>
    <string name="alertProfileTitle">Вы действительно хотите выйти?</string>
    <string name="alertProfileDescription">При выходе ваши авторизационные данные будут удалены.</string>
    <string name="alertProfileConfBtn">Выйти</string>
    <string name="alertProfileCancelBtn">Отменить</string>
    <string name="internetUpdateBtn">Обновить страницу</string>
    <string name="internetUpdateTitle">НЕТ ИНТЕРНЕТ СОЕДИНЕНИЯ</string>
    <string name="internetUpdateDescription">Проверьте настройки подключения к интернету и обновите страницу</string>
    <string name="loadTitle">Приятных покупок</string>
    <string name="orderSuccessfulTitle">Заказ оформлен</string>
    <string name="orderSuccessfulDescription">В ближайщее время наш менеджер свяжется с вами для подтверждения заказа</string>
    <string name="goHomeBtn">Вернуться домой</string>
    <string name="emptyBasket">Ваша корзина пуста</string>
    <string name="alertCardTitle">Вы действительно хотите отвязать вашу карту?</string>
    <string name="alertCardBtn">Отвязать</string>
    <string name="splashLoad">Доставка продуктов</string>
    <string name="dateTimeTitle">Желаемая дата и время доставки</string>
    <string name="onPush">Push уведомления</string>
    <string name="onLocation">Определение местоположения</string>
    <string name="settingTitle">Настройки</string>
    <string name="permissionTitle">Разрешения</string>
    <string name="versionAppTitle">О приложении</string>
    <string name="starTitle">Мои звезды</string>
    <string name="starGet">Получено звезд</string>
    <string name="starRemove">Списано звезд</string>
    <string name="registrationTitle">Представтесь</string>
    <string name="presonalTitle">Личные данные</string>
    <string name="firstNameTitle">Имя</string>
    <string name="lastNameTitle">Фамилия</string>
    <string name="secondNameTitle">Отчество</string>
    <string name="birthDateTitle">Дата рождения</string>
    <string name="phoneTitle">Телефон</string>
    <string name="addressTitle">Адрес</string>
    <string name="confPhoneTitle">Код подтверждения</string>
    <string name="confPhoneBtn">Получить код</string>
    <string name="editInfomationBtn">Обновить данные</string>
    <string name="cancelBtn">Отменить</string>
    <string name="confPhoneError">Указанный номер телефона не подтвержден</string>
    <string name="confPhoneToError">При изменении номера, необходимо подтвердить новый номер телефона</string>
    <string name="confCodeError">Укажите код подтверждения</string>
    <string name="registrationBtn">Присоединиться</string>
    <string name="webViewBtn">Подробнее</string>
    <string name="unit">Цена за 1 шт</string>
    <string name="notifyLink">Подробности</string>
    <string name="cuponsTitle">Мои купоны</string>
    <string name="cuponName">Купон на скидку</string>
    <string name="cuponEnd">Дата завершения</string>
    <string name="cuponUse">Открыть купон</string>
    <string name="cuponDetail">Купон</string>
    <string name="cuponNameExample">Купон на скидку в размере 20% для кофе в капусал Belmio</string>
    <string name="cuponDetailDescription">Предъявите QR код кассиру, чтобы получить скидку</string>
    <string name="virtualCard">Моя клубная карта</string>
    <string name="goToWebSiteBtn">Подробнее</string>
    <string name="personalTitle">Личные данные</string>
    <string name="saveText">Сохраняются данные ...</string>
    <string name="account">Аккаунт</string>
    <string name="editAccount">Редактировать аккаунт</string>
    <string name="add_adress">Добавить адрес</string>
    <string name="my_addresses">Адрес доставки</string>
    <string name="addressConf2">Доставка</string>
    <string name="test_address">улица Садриддин Айни 16Б</string>
    <string name="delivery_way">Способ доставки</string>
    <string name="pay_way">Способ оплаты</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="my_baskets">Список корзин</string>
    <string name="add_basket">Новая корзина</string>
    <string name="basket_name">Имя корзины</string>
    <string name="basket_description">Описание</string>
    <string name="add_this_basket">Добавить корзину</string>
    <string name="newBasketDescriptionLayoutError">Укажите описание к корзине</string>
    <string name="newBasketNameLayoutError">Укажите имя корзины</string>
    <string name="create_basket">Создать список корзин</string>
    <string name="sendingOrderToBasket">Идёт оформление заказа ...</string>
    <string name="add_list">Добавьте товары в ваш список</string>
    <string name="have_not_baskets">У вас нет списка корзин</string>
    <string name="text_full">Дорогие друзья!\nПожалуйста, опишите предложение или проблему максимально подробно и заполните все поля, чтобы мы смогли быстро разобраться и вернуться к вам с решением.</string>
    <string name="writeFeedback">Оставить свой отзыв</string>
    <string name="enter_data">Заполните данные</string>
    <string name="save">Сохранить</string>
    <string name="personal_qr">Персональный QR Code</string>
    <string name="car_number">Укажите номер вашей автомашины и получите ваш персональный QR Code</string>
    <string name="state_number">Гос. номер</string>
    <string name="remember_my_s_n">\  Запомнить мой гос. номер</string>
    <string name="getQr">Получить QR Code</string>
    <string name="i_accept">Я принимаю условия Пользовательского соглашения</string>
    <string name="show_qr">Покажите QR Code кассиру</string>
    <string name="hour">час</string>
    <string name="minutes">минут</string>
    <string name="seconds">секунд</string>
    <string name="attention">Внимание!</string>
    <string name="addToFavorites">Добавить в избранную</string>
    <string name="title">Название</string>
</resources>