<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myBasketsListBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_baskets"
        android:textAlignment="center"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/black_to_white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myBasketsListRecycler"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/have_not_baskets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/have_not_baskets"
        android:textAlignment="center"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="16dp"
        android:textColor="@color/black_to_white"
        android:visibility="invisible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createBasket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/create_basket"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/green"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"/>

</LinearLayout>