<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@color/cardBackground"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/orderStatusTitle"
                android:layout_width="150dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/orderStatusTitle"
                android:textSize="16sp"
                app:autoSizeMaxTextSize="16dp"
                app:autoSizeMinTextSize="14dp"
                app:autoSizeTextType="uniform"
                app:autoSizeStepGranularity="16dp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/orderDateTitle" />

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/orderDate"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:autoSizeMaxTextSize="16dp"
                app:autoSizeMinTextSize="14dp"
                app:autoSizeTextType="uniform"
                app:autoSizeStepGranularity="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/orderDateTitle"
                app:layout_constraintTop_toBottomOf="@+id/orderNumber" />

            <TextView
                android:id="@+id/orderStatus"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/orderStatus"
                android:textAlignment="viewStart"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:autoSizeMaxTextSize="16dp"
                app:autoSizeMinTextSize="14dp"
                app:autoSizeTextType="uniform"
                app:autoSizeStepGranularity="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/orderStatusTitle"
                app:layout_constraintTop_toBottomOf="@+id/orderDate"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/orderNumber"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:text="@string/orderNumber"
                android:textSize="16sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="16dp"
                app:autoSizeMinTextSize="14dp"
                app:autoSizeStepGranularity="16dp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toStartOf="@+id/cancellation"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancellation"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cancellationOrder"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="14sp"
                app:autoSizeMaxTextSize="14dp"
                app:autoSizeMinTextSize="12dp"
                app:autoSizeStepGranularity="14dp"
                app:autoSizeTextType="uniform"
                app:icon="@drawable/ic_x_mark"
                app:iconPadding="16dp"
                app:iconSize="14dp"
                app:iconTint="@color/red"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/shopGrey" />

            <TextView
                android:id="@+id/orderPriceTitle"
                android:layout_width="150dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"
                android:text="@string/orderHistoryPriceTitle"
                android:textSize="16sp"
                app:autoSizeMaxTextSize="16dp"
                app:autoSizeMinTextSize="14dp"
                app:autoSizeTextType="uniform"
                app:autoSizeStepGranularity="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/orderStatusTitle" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_circle_2" />

            <TextView
                android:id="@+id/orderDateTitle"
                android:layout_width="150dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/orderDateTitle"
                android:textSize="16sp"
                app:autoSizeMaxTextSize="16dp"
                app:autoSizeMinTextSize="14dp"
                app:autoSizeTextType="uniform"
                app:autoSizeStepGranularity="16dp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/orderNumber" />

            <TextView
                android:id="@+id/orderPrice"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/orderHistoryPrice"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                android:textSize="16sp"
                app:autoSizeMaxTextSize="16dp"
                app:autoSizeMinTextSize="14dp"
                app:autoSizeTextType="uniform"
                app:autoSizeStepGranularity="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/orderPriceTitle"
                app:layout_constraintTop_toBottomOf="@+id/orderStatus" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>