<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardBindingBottomSheet"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_data"
        android:textAlignment="center"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black_to_white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstNameTitle"
        app:errorTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxBackgroundColor="@color/lightToDark"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastNameTitle"
        app:errorTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxBackgroundColor="@color/lightToDark"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdayLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthDateTitle"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_calendar"
        app:errorTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxBackgroundColor="@color/lightToDark"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendMyData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="36dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textSize="14dp"
        android:textColor="@color/white"/>

</LinearLayout>